Height collapsing fixed

--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,6 @@ body {
   background-color: #14bdac;
   @include display-flex;
   position: relative;
-  overflow: hidden;
 }
 .game-grid {
   width: 350px;
